[gd_scene load_steps=12 format=3 uid="uid://wejyngfmbjav"]

[ext_resource type="Script" path="res://scenes/game_objects/skeleton.gd" id="1_dleql"]
[ext_resource type="Texture2D" uid="uid://bsy8rfe8rruay" path="res://assets/enemies/Skeleton.png" id="2_3kl6a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_84dj8"]
radius = 7.34694

[sub_resource type="Animation" id="Animation_ywo28"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkeletonImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nb7lo"]
resource_name = "attack1"
length = 0.51
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkeletonImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_0v2br"]
resource_name = "attack2"
length = 0.61
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkeletonImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_0h0g7"]
resource_name = "block"
length = 0.31
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkeletonImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35]
}

[sub_resource type="Animation" id="Animation_bp1nc"]
resource_name = "idle"
length = 0.51
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkeletonImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_tsrv3"]
resource_name = "walk"
length = 0.71
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SkeletonImage:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3g0b2"]
_data = {
"RESET": SubResource("Animation_ywo28"),
"attack1": SubResource("Animation_nb7lo"),
"attack2": SubResource("Animation_0v2br"),
"block": SubResource("Animation_0h0g7"),
"idle": SubResource("Animation_bp1nc"),
"walk": SubResource("Animation_tsrv3")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_po6sk"]
radius = 75.0

[node name="Skeleton" type="CharacterBody2D" groups=["Hit"]]
collision_layer = 28
collision_mask = 12
script = ExtResource("1_dleql")

[node name="SkeletonImage" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_3kl6a")
hframes = 8
vframes = 7

[node name="HitDetectionArea" type="Area2D" parent="SkeletonImage"]
unique_name_in_owner = true
position = Vector2(0.355, 0)
scale = Vector2(1.225, 1.225)
collision_layer = 9
collision_mask = 4

[node name="SkeletonHitbox" type="CollisionShape2D" parent="SkeletonImage/HitDetectionArea"]
unique_name_in_owner = true
position = Vector2(1.34286, 0)
shape = SubResource("CircleShape2D_84dj8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_3g0b2")
}
autoplay = "idle"

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 2

[node name="VisionRange" type="CollisionShape2D" parent="VisionArea"]
position = Vector2(2, 0)
shape = SubResource("CircleShape2D_po6sk")

[connection signal="area_entered" from="SkeletonImage/HitDetectionArea" to="." method="_on_hit_detection_area_area_entered"]
[connection signal="body_entered" from="SkeletonImage/HitDetectionArea" to="." method="_on_hit_detection_area_body_entered"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
